<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_documents"
            android:icon="@drawable/ic_folder_black_24dp"
            android:title="@string/menu_documents" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_rules_agreements"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/menu_rules_agreements" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/menu_logout" />
    </group>
</menu>
