<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.wensambulanceapp.ui.wishes.WishesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_wishes" />

    <fragment
        android:id="@+id/nav_documents"
        android:name="com.example.wensambulanceapp.ui.documents.DocumentsFragment"
        android:label="@string/menu_documents"
        tools:layout="@layout/fragment_documents" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.wensambulanceapp.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_rules_agreements"
        android:name="com.example.wensambulanceapp.ui.rulesAgreements.RulesAgreementsFragment"
        android:label="@string/menu_rules_agreements"
        tools:layout="@layout/fragment_rules_agreements" />


</navigation>